# bstars_aer1514

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: example.launch
src/: qrdecoder.py
turtlebot_ws/: basic_turtlebot.launch  notes_mar_22  notes_mar_3  run_sim.bash  turtlebot_external_laptop.launch
turtlebot_ws/devel/: .catkin  .rosinstall  setup.sh
turtlebot_ws/devel/lib/pkgconfig/: bstars_sim.pc  usb_cam.pc
turtlebot_ws/devel/lib/usb_cam/: usb_cam_node
turtlebot_ws/src/: CMakeLists.txt
turtlebot_ws/src/bstars_navigation/: CMakeLists.txt  package.xml
turtlebot_ws/src/bstars_navigation/action/: GoToWaypoints.action
turtlebot_ws/src/bstars_navigation/launch/: astra_gmapping_custom.launch.xml  bstars_amcl.launch  bstars_gmapping.launch  move_base.launch.xml
turtlebot_ws/src/bstars_navigation/maps/: machine_shop.pgm  machine_shop.yaml  machine_shop_new.pgm  machine_shop_new.yaml  start_point_map.pgm  start_point_map.yaml  supply_closet.pgm  supply_closet.yaml  test.xcf  utias_hallways.pgm  utias_hallways.yaml  utias_hallways_new.yaml  utias_hallways_new_with_gmaps.yaml  utias_hallways_with_gmaps.pgm  utias_hallways_with_gmaps.yaml  utility_room.pgm  utility_room.yaml
turtlebot_ws/src/bstars_navigation/param/: corner_death_zone.txt  end_of_hallway.txt~  (+24 more)
turtlebot_ws/src/bstars_sim/: CMakeLists.txt  package.xml
turtlebot_ws/src/bstars_sim/launch/: bstars_sim.launch
turtlebot_ws/src/bstars_sim/maps/: hallways.pgm  hallways_modified.yaml  hallways_modified_first_try.xcf  sim_hallways.pgm  sim_hallways_modified.pgm  sim_hallways_modified.xcf  sim_hallways_modified.yaml  sim_hallways_modified.yaml~  utias_hallways.pgm  utias_hallways.xcf  utias_hallways.yaml  utias_hallways_with_gmaps.xcf
turtlebot_ws/src/bstars_sim/param/: sim_params.yaml
turtlebot_ws/src/bstars_sim/worlds/: turtlebot_hallway_world.world
turtlebot_ws/src/bstars_state_machine/: CMakeLists.txt  package.xml
turtlebot_ws/src/ros-qr-listener/: CMakeLists.txt  LICENSE  package.xml
turtlebot_ws/src/ros-qr-listener/launch/: dual_camera.launch  example.launch  web_cam_only.launch
turtlebot_ws/src/ros-qr-listener/src/: marker_visualize.cpp  qr_localizer.cpp  qrdecoder.py
(+6 files in other folders)
