<?xml version="1.0"?>
<package>
  <name>bstars_sim</name>
  <version>0.0.0</version>
  <description>The bstars_sim package for AER1514 Winter 2017</description>

  <maintainer email="trevor.ablett@gmail.com">Trevor Ablett</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>depthimage_to_laserscan</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>turtlebot_description</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>yocs_cmd_vel_mux</build_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>

</package>