<?xml version="1.0"?>
<package>
  <name>ros_qr_listener</name>
  <version>1.0.0</version>
  <description>The ros_qr_listener package</description>


  <maintainer email="joao.p.garcia@tecnico.ulisboa.pt">João Garcia</maintainer>


  <license>MIT</license>


  <author email="joao.p.garcia@tecnico.ulisboa.pt">João Garcia</author> -->


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>


  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
